--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<p>The project identifies patterns and forecast energy consumption in Tetouan, Morocco, using data collected in 2017. The analysis shows that energy consumption exhibits significant hourly and monthly seasonality. We utilized time-series models, including ARIMA, ARIMAX, VAR, and VARX, to obtain forecasts.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/shutter-speed-inventory-unsplash.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/shutter-speed-inventory-unsplash.jpg" alt="" /></a>
+								<a href="images/thumbs/inventory db.png" class="image fit thumb" target="_blank"><img src="images/thumbs/shutter-speed-inventory-unsplash.jpg" alt="" /></a>
 								<h3>Sports Inventory SQL Database</h3>
 								<p>This project is an inventory database for badminton equipment sold under Li-Ning Company Limited in Georgia, USA. The inventory tracks real-world inventory, sponsored equipment, sales, and stringing services data. It uses phpMyAdmin and XAMPP to manage and query the database using SQL.</p>
 							</article>
