--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/vlai6/Sporting-Goods-Store-RFM-Analysis" class="image fit thumb" target="_blank"><img src="images/fulls/bike-sports-shop-chatgpt.png" alt="" /></a>
+								<h3>Sporting Goods Store RFM Analysis</h3>
+								<p>This project analyzes customer behavior using RFM and CLV segmentation. R was used for data cleaning, exploratory analysis, and quintile creation. The processed data was then imported into Tableau to visualize spending patterns and identify high-value customer segments. </p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/vlai6/CSE6242-Team-194-Pandemic-Rescue" class="image fit thumb" target="_blank"><img src="images/fulls/martin-sanchez-covid-unsplash.jpg" alt="" /></a>
 								<h3>Economic Impacts of COVID-19 Analysis</h3>
 								<p>This project analyzes the impacts of COVID-19 on several U.S. economic indicators. By utilizing regression models and neural networks in R, the study develops 14 relief indexes to identify which economic sectors are most impacted and have the slowest rate of recovery. </p>
