--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							I enjoy helping businesses transform real-world data into usable information that can drive consumer value. I have experience in data analysis, visualization, marketing, and sales, and I'm skilled in tools like SQL, Python, R, Tableau, and Excel.
 							In this portfolio are a few of my projects demonstrating my ability to solve problems and create value with data!</p>
 						<ul class="actions">
-							<li><a href="https://github.com/vlai6/resume/blob/main/laivictor_resume%20analyst.pdf" class="button" target="_blank">My Resume</a></li>
+							<li><a href="https://github.com/vlai6/resume/blob/main/laivictor_resume%20analytics.pdf" class="button" target="_blank">My Resume</a></li>
 						</ul>
 					</section>
 
